syntax = "proto3";

package auth;

option go_package = "orch/v1/auth";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Me(MeRequest) returns (MeResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string accessToken = 1;
}


message MeRequest {
}

message MeResponse{
    string about = 1;
    string address = 2;
    string city = 3;
    string country = 4;
    string displayName = 5;
    string email = 6;
    string id = 7;
    bool isPublic = 8;
    string password = 9;
    string phoneNumber = 10;
    string photoURL = 11;
    string role = 12;
    string state = 13;
    string zipCode = 14;
}

